package com.wtking.tasksequencer.bean

/**
 * author: WentaoKing
 * created on: 2022/5/23
 * description: 任务类型
 */
enum class TaskType {
    CPU_BOUND, IO_BOUND
}